--- a/.github/workflows/generated-linux-bionic-rocm4.5-py3.7.yml
+++ b/.github/workflows/generated-linux-bionic-rocm4.5-py3.7.yml
@@ -321,15 +321,24 @@ jobs:
           rm -f ~/.ssh/authorized_keys
       - name: Set DOCKER_HOST
         run: echo "DOCKER_HOST=unix:///run/user/$(id -u)/docker.sock" >> "${GITHUB_ENV}"
-      - name: Runner health check
+      - name: Runner health check system info
+        if: always()
         run: |
           cat /etc/os-release || true
-          cat /etc/apt/sources.list || true
           cat /etc/apt/sources.list.d/rocm.list || true
           cat /opt/rocm/.info/version || true
           whoami
+      - name: Runner health check rocm-smi
+        if: always()
+        run: |
           rocm-smi
+      - name: Runner health check rocminfo
+        if: always()
+        run: |
           rocminfo
+      - name: Runner health check GPU count
+        if: always()
+        run: |
           ngpu=$(rocminfo | grep -c -E 'Name:.*\sgfx')
           if [[ "x$ngpu" != "x4" ]]; then
               echo "Failed to detect 4 GPUs on the runner"
