--- a/torch/csrc/api/include/torch/version.h.in
+++ b/torch/csrc/api/include/torch/version.h.in
@@ -9,6 +9,9 @@
 /// Indicates the patch version of LibTorch.
 #define TORCH_VERSION_PATCH @TORCH_VERSION_PATCH@
 
+/// Indicates the commit hash of LibTorch.
+#define TORCH_VERSION_HASH @TORCH_VERSION_HASH@
+
 /// Indicates the version of LibTorch.
 #define TORCH_VERSION \
-  "@TORCH_VERSION_MAJOR@.@TORCH_VERSION_MINOR@.@TORCH_VERSION_PATCH@"
+  "@TORCH_VERSION_MAJOR@.@TORCH_VERSION_MINOR@.@TORCH_VERSION_PATCH@@TORCH_VERSION_HASH@"
