--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -10169,6 +10169,19 @@
 #   torch/special/__init__.py, and the desired C++ name in torch/csrc/api/include/torch/special.h.
 #   The "special_" names should be hidden from the user and not documented.
 
+- func: special_ellipe(Tensor self) -> Tensor
+  structured_delegate: special_ellipe.out
+  python_module: special
+  variants: function
+
+- func: special_ellipe.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
+  structured: True
+  structured_inherits: TensorIteratorBase
+  python_module: special
+  variants: function
+  dispatch:
+    CPU, CUDA: special_ellipe_out
+
 - func: special_entr(Tensor self) -> Tensor
   structured_delegate: special_entr.out
   python_module: special
