--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -805,6 +805,11 @@
   rtol: non_differentiable
   output_differentiability: [True, True, True, False]
 
+- name: linalg_svd_rank_restricted(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  atol: non_differentiable
+  rtol: non_differentiable
+  output_differentiability: [True, True, True, False]
+
 - name: isnan(Tensor self) -> Tensor
   self: non_differentiable
 
