add a helper function that is svd+rank in forward

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -10975,6 +10975,12 @@
   python_module: linalg
   variants: function
 
+- func: _linalg_svd_rank_restricted_helper(Tensor input, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank, Tensor unique_ranks)
+  variants: function
+
+- func: _linalg_svd_rank_restricted_helper.out(Tensor input, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True, *, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank, Tensor(e!) unique_ranks) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank, Tensor(e!) unique_rank)
+  variants: function
+
 - func: linalg_svd_rank_revealing(Tensor input, float tol, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
   python_module: linalg
   variants: function
