--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -11023,9 +11023,39 @@
   python_module: linalg
   variants: function
 
-- func: linalg_svd_rank_restricted(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+- func: linalg_svd_rank_restricted(Tensor input, float tol, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
   python_module: linalg
   variants: function
+
+  #- func: linalg_svd_rank_restricted.out(Tensor input, float tol, bool full_matrices=True, *, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  #  python_module: linalg
+  #  variants: function
+
+- func: linalg_svd_rank_restricted.tol(Tensor input, Tensor tol, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+  #- func: linalg_svd_rank_restricted.tol_out(Tensor input, Tensor tol, bool full_matrices=True, *, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  #  python_module: linalg
+  #  variants: function
+
+- func: linalg_svd_rank_restricted.tartol(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+  #- func: linalg_svd_rank_restricted.tartol_out(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  #  python_module: linalg
+  #  variants: function
+
+- func: linalg_svd_rank_restricted.fartol(Tensor input, *, float? atol=None, float? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  cpp_no_default_args: ['atol', 'rtol']
+  python_module: linalg
+  variants: function
+
+  #- func: linalg_svd_rank_restricted.fartol_out(Tensor input, *, float? atol=None, float? rtol=None, bool full_matrices=True, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  #  cpp_no_default_args: ['atol', 'rtol']
+  #  python_module: linalg
+  #  variants: function
 
 - func: linalg_cond(Tensor self, Scalar? p=None) -> Tensor
   python_module: linalg
