--- a/.github/workflows/generated-xla-linux-bionic-py3.7-clang8.yml
+++ b/.github/workflows/generated-xla-linux-bionic-py3.7-clang8.yml
@@ -1,25 +1,24 @@
 # @generated DO NOT EDIT MANUALLY
 # Template is at:    .github/templates/linux_ci_workflow.yml.j2
 # Generation script: .github/scripts/generate_ci_workflows.py
-name: linux-bionic-py3.7-clang9
+name: xla-linux-bionic-py3.7-clang8
 
 on:
-  pull_request:
   push:
     tags:
       - 'ciflow/all/*'
       - 'ciflow/cpu/*'
       - 'ciflow/linux/*'
-      - 'ciflow/noarch/*'
       - 'ciflow/trunk/*'
+      - 'ciflow/xla/*'
     branches:
       - master
       - release/*
   workflow_dispatch:
 
 env:
-  BUILD_ENVIRONMENT: linux-bionic-py3.7-clang9
-  DOCKER_IMAGE_BASE: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/pytorch-linux-bionic-py3.7-clang9
+  BUILD_ENVIRONMENT: xla-linux-bionic-py3.7-clang8
+  DOCKER_IMAGE_BASE: 308535385114.dkr.ecr.us-east-1.amazonaws.com/pytorch/xla_base
   SCCACHE_BUCKET: ossci-compiler-cache-circleci-v2
   XLA_CLANG_CACHE_S3_BUCKET_NAME: ossci-compiler-clang-cache-circleci-xla
   TORCH_CUDA_ARCH_LIST: 5.2
@@ -37,7 +36,7 @@ env:
   SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
   PYTORCH_RETRY_TEST_CASES: 1
 concurrency:
-  group: linux-bionic-py3.7-clang9-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
+  group: xla-linux-bionic-py3.7-clang8-${{ github.event.pull_request.number || github.sha }}-${{ github.event_name == 'workflow_dispatch' }}
   cancel-in-progress: true
 
 jobs:
@@ -46,7 +45,7 @@ jobs:
     runs-on: linux.2xlarge
     timeout-minutes: 240
     env:
-      JOB_BASE_NAME: linux-bionic-py3.7-clang9-build
+      JOB_BASE_NAME: xla-linux-bionic-py3.7-clang8-build
     outputs:
       docker_image: ${{ steps.calculate-tag.outputs.docker_image }}
     steps:
@@ -257,6 +256,7 @@ jobs:
       TEST_RUNNER_TYPE: linux.2xlarge
       ENABLE_DISTRIBUTED_TEST: ''
       ENABLE_JIT_LEGACY_TEST: ''
+      ENABLE_FX2TRT_TEST: ''
       ENABLE_MULTIGPU_TEST: ''
       ENABLE_NOGPU_NO_AVX_TEST: ''
       ENABLE_NOGPU_NO_AVX2_TEST: ''
@@ -264,7 +264,7 @@ jobs:
       ENABLE_DOCS_TEST: ''
       ENABLE_BACKWARDS_COMPAT_TEST: ''
       ENABLE_XLA_TEST: 1
-      ENABLE_NOARCH_TEST: 1
+      ENABLE_NOARCH_TEST: ''
       NUM_TEST_SHARDS: 2
       MULTIGPU_RUNNER_TYPE: linux.16xlarge.nvidia.gpu
       DISTRIBUTED_GPU_RUNNER_TYPE: linux.8xlarge.nvidia.gpu
@@ -294,7 +294,7 @@ jobs:
     timeout-minutes: 240
     env:
       DOCKER_IMAGE: ${{ needs.build.outputs.docker_image }}
-      JOB_BASE_NAME: linux-bionic-py3.7-clang9-test
+      JOB_BASE_NAME: xla-linux-bionic-py3.7-clang8-test
       TEST_CONFIG: ${{ matrix.config }}
       SHARD_NUMBER: ${{ matrix.shard }}
       NUM_TEST_SHARDS: ${{ matrix.num_shards }}
@@ -512,7 +512,7 @@ jobs:
         env:
           AWS_DEFAULT_REGION: us-east-1
           BRANCH: ${{ steps.parse-ref.outputs.branch }}
-          JOB_BASE_NAME: linux-bionic-py3.7-clang9-test
+          JOB_BASE_NAME: xla-linux-bionic-py3.7-clang8-test
           PR_NUMBER: ${{ github.event.pull_request.number }}
           SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
           TAG: ${{ steps.parse-ref.outputs.tag }}
